2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Microwave_5__c.field-meta.xml
<CustomField>
    <fullName>Microwave_5__c</fullName>
    <label>Microwave -  5</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>