2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Microwave_Sum__c.field-meta.xml
<CustomField>
    <fullName>Microwave_Sum__c</fullName>
    <formula>Microwave_5__c *5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Microwave Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>