2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Mirror_Large_3__c.field-meta.xml
<CustomField>
    <fullName>Mirror_Large_3__c</fullName>
    <label>Mirror - Large - 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>