2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Mirror_Small_1__c.field-meta.xml
<CustomField>
    <fullName>Mirror_Small_1__c</fullName>
    <label>Mirror - Small - 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>