2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Mirrors_Sum__c.field-meta.xml
<CustomField>
    <fullName>Mirrors_Sum__c</fullName>
    <formula>Mirror_Large_3__c  * 3 +  Mirror_Small_1__c  * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mirrors Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>