2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Misc_Sum__c.field-meta.xml
<CustomField>
    <fullName>Misc_Sum__c</fullName>
    <formula>Pics_Paintings_Sum__c  +  BBQ_Sum__c  +  Bicycles_Sum__c  +  Cabinet_Filing_Sum__c  +  Dragon_Pots_Sum__c  +  Golf_Sum__c  +  Flower_Pots_Sum__c  +  Carpets_Sum__c  +  Rugs_Sum__c  +  Por_Elephant_Sum__c  +  Por_Stool_Sum__c +  Safe_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Misc Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>