2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Night_Table_4_5__c.field-meta.xml
<CustomField>
    <fullName>Night_Table_4_5__c</fullName>
    <label>Night Table - 4,5</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>