2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Night_Table_Sum__c.field-meta.xml
<CustomField>
    <fullName>Night_Table_Sum__c</fullName>
    <formula>Night_Table_4_5__c  * 4.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Night Table Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>