2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Nur_Chairs_Sum__c.field-meta.xml
<CustomField>
    <fullName>Nur_Chairs_Sum__c</fullName>
    <formula>Chair_Child_3__c  * 3 +  Chair_High_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nur Chairs Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>