2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Nur_Chest_Sum__c.field-meta.xml
<CustomField>
    <fullName>Nur_Chest_Sum__c</fullName>
    <formula>Chest_10__c  * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nur Chest Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>