2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Nur_Table_Sum__c.field-meta.xml
<CustomField>
    <fullName>Nur_Table_Sum__c</fullName>
    <formula>Table_Child_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nur Table Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>