2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Nursery_Sum__c.field-meta.xml
<CustomField>
    <fullName>Nursery_Sum__c</fullName>
    <formula>Bed_Youth_Sum__c  +  Nur_Chairs_Sum__c  +  Crib_Baby_Sum__c  +  Play_Pen_Sum__c  +  Nur_Table_Sum__c  +  Nur_Chest_Sum__c  +  Toy_Box_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nursery Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>