2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Organ_25__c.field-meta.xml
<CustomField>
    <fullName>Organ_25__c</fullName>
    <label>Organ - 25</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>