2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Peacock_Pappasan_25__c.field-meta.xml
<CustomField>
    <fullName>Peacock_Pappasan_25__c</fullName>
    <label>Peacock/Pappasan - 25</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>