2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Peacock_Pappasan_Sum__c.field-meta.xml
<CustomField>
    <fullName>Peacock_Pappasan_Sum__c</fullName>
    <formula>Peacock_Pappasan_25__c  * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peacock/Pappasan Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>