2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Piano_Grand_80__c.field-meta.xml
<CustomField>
    <fullName>Piano_Grand_80__c</fullName>
    <label>Piano - Grand - 80</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>