2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Piano_Stool_5__c.field-meta.xml
<CustomField>
    <fullName>Piano_Stool_5__c</fullName>
    <label>Piano - Stool - 5</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>