2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Piano_Sum__c.field-meta.xml
<CustomField>
    <fullName>Piano_Sum__c</fullName>
    <formula>Piano_Grand_80__c  * 80 +  Piano_Stool_5__c  * 5 +  Piano_Upright_40__c  * 40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Piano Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>