2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Piano_Upright_40__c.field-meta.xml
<CustomField>
    <fullName>Piano_Upright_40__c</fullName>
    <label>Piano - Upright - 40</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>