2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Pics_Paintings_1__c.field-meta.xml
<CustomField>
    <fullName>Pics_Paintings_1__c</fullName>
    <label>Pics/Paintings - 1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>