2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Pics_Paintings_Sum__c.field-meta.xml
<CustomField>
    <fullName>Pics_Paintings_Sum__c</fullName>
    <formula>Pics_Paintings_1__c *1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pics/Paintings Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>