2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Play_Pen_Sum__c.field-meta.xml
<CustomField>
    <fullName>Play_Pen_Sum__c</fullName>
    <formula>Play_Pen_10__c  * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Play Pen Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>