2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Por_Elephant_Sum__c.field-meta.xml
<CustomField>
    <fullName>Por_Elephant_Sum__c</fullName>
    <formula>Por_Elephant_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Por Elephant Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>