2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Por_Stool_Sum__c.field-meta.xml
<CustomField>
    <fullName>Por_Stool_Sum__c</fullName>
    <formula>Por_Stool_2__c  * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Por Stool Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>