2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Refrigerator_Sum__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Sum__c</fullName>
    <formula>Refrigerator_25__c *25 +  Refrigerator_40__c  * 40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refrigerator Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>