2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Rocker_15__c.field-meta.xml
<CustomField>
    <fullName>Rocker_15__c</fullName>
    <label>Rocker - 15</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>