2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Rocker_Sum__c.field-meta.xml
<CustomField>
    <fullName>Rocker_Sum__c</fullName>
    <formula>Rocker_15__c  * 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rocker Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>