2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Rugs_2__c.field-meta.xml
<CustomField>
    <fullName>Rugs_2__c</fullName>
    <label>Rugs - 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>