2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Rugs_Sum__c.field-meta.xml
<CustomField>
    <fullName>Rugs_Sum__c</fullName>
    <formula>Rugs_2__c  * 2 +  Rugs_3__c  * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rugs Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>