2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/S_M_L_Cartons_Sum__c.field-meta.xml
<CustomField>
    <fullName>S_M_L_Cartons_Sum__c</fullName>
    <formula>Cartons_L_7__c  * 7 +  Cartons_M_4__c  * 4 +  Cartons_S_2__c  * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S/M/L Cartons Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>