2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Safe_Sum__c.field-meta.xml
<CustomField>
    <fullName>Safe_Sum__c</fullName>
    <formula>Safe_20__c  * 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>