2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Sm_Chest_W_Draw_18__c.field-meta.xml
<CustomField>
    <fullName>Sm_Chest_W_Draw_18__c</fullName>
    <label>Sm. Chest W/Draw - 18</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>