2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Sofa_2_seater_35__c.field-meta.xml
<CustomField>
    <fullName>Sofa_2_seater_35__c</fullName>
    <label>Sofa(2-seater) - 35</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>