2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Sofa_3_seater_45__c.field-meta.xml
<CustomField>
    <fullName>Sofa_3_seater_45__c</fullName>
    <label>Sofa(3-seater) - 45</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>