2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Sofas_Sum__c.field-meta.xml
<CustomField>
    <fullName>Sofas_Sum__c</fullName>
    <formula>Sofa_2_seater_35__c  * 35 +  Sofa_3_seater_45__c  * 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sofas Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>