2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Straight_8__c.field-meta.xml
<CustomField>
    <fullName>Straight_8__c</fullName>
    <label>Straight - 8</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>