2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Straight_Sum__c.field-meta.xml
<CustomField>
    <fullName>Straight_Sum__c</fullName>
    <formula>Straight_8__c  * 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Straight Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>