2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Sum_Total__c.field-meta.xml
<CustomField>
    <fullName>Sum_Total__c</fullName>
    <formula>Bedroom_Sum__c  +  Dining_Room_Sum__c  +  Kitchen_Sum__c  +  Living_Room_Sum__c  +  Misc_Sum__c  +  Nursery_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>