2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Table_End_10__c.field-meta.xml
<CustomField>
    <fullName>Table_End_10__c</fullName>
    <label>Table - End - 10</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>