2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Table_Round_45__c.field-meta.xml
<CustomField>
    <fullName>Table_Round_45__c</fullName>
    <label>Table Round - 45</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>