2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Table_Round_Sum__c.field-meta.xml
<CustomField>
    <fullName>Table_Round_Sum__c</fullName>
    <formula>Table_Round_45__c *45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Table Round Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>