2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Table_Std_35__c.field-meta.xml
<CustomField>
    <fullName>Table_Std_35__c</fullName>
    <label>Table Std - 35</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>