2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Table_Std_Sum__c.field-meta.xml
<CustomField>
    <fullName>Table_Std_Sum__c</fullName>
    <formula>Table_Std_35__c *35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Table Std Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>