2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Tape_VCR_4__c.field-meta.xml
<CustomField>
    <fullName>Tape_VCR_4__c</fullName>
    <label>Tape VCR - 4</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>