2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Tape_VCR_Sum__c.field-meta.xml
<CustomField>
    <fullName>Tape_VCR_Sum__c</fullName>
    <formula>Tape_VCR_4__c  * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tape VCR Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>