2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Televisions_Sum__c.field-meta.xml
<CustomField>
    <fullName>Televisions_Sum__c</fullName>
    <formula>Television_L_12__c  * 12 +  Television_S_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Televisions - Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>