2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Test_Book_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Book_Case__c</fullName>
    <defaultValue>&quot;Book Case&quot;</defaultValue>
    <label>Test - Book Case</label>
    <length>30</length>
    <type>Text</type>
</CustomField>