2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Test_Book_Case_Cuft__c.field-meta.xml
<CustomField>
    <fullName>Test_Book_Case_Cuft__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Test - Book Case (Cuft)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>