2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Test_Book_Case_Qty__c.field-meta.xml
<CustomField>
    <fullName>Test_Book_Case_Qty__c</fullName>
    <label>Test - Book Case (Qty)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>