2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Toy_Box_Sum__c.field-meta.xml
<CustomField>
    <fullName>Toy_Box_Sum__c</fullName>
    <formula>Toy_Box_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toy Box Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>