2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/TV_Rack_12__c.field-meta.xml
<CustomField>
    <fullName>TV_Rack_12__c</fullName>
    <label>TV Rack - 12</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>