2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/TV_Rack_Sum__c.field-meta.xml
<CustomField>
    <fullName>TV_Rack_Sum__c</fullName>
    <formula>TV_Rack_12__c  * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TV Rack - Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>