2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Van_Dresser_Sum__c.field-meta.xml
<CustomField>
    <fullName>Van_Dresser_Sum__c</fullName>
    <formula>Van_Dresser_W_O_Mir_20__c  * 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Van. Dresser Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>