2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Van_Dresser_W_O_Mir_20__c.field-meta.xml
<CustomField>
    <fullName>Van_Dresser_W_O_Mir_20__c</fullName>
    <label>Van. Dresser W/O Mir. - 20</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>