2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Wardrobe_27__c.field-meta.xml
<CustomField>
    <fullName>Wardrobe_27__c</fullName>
    <label>Wardrobe - 27</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>