2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Wardrobe_Sum__c.field-meta.xml
<CustomField>
    <fullName>Wardrobe_Sum__c</fullName>
    <formula>Wardrobe_27__c  * 27</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wardrobe Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>