2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Washing_Machine_Sum__c.field-meta.xml
<CustomField>
    <fullName>Washing_Machine_Sum__c</fullName>
    <formula>Washing_Machine_25__c  * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Washing Machine Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>